<resources>
    <string name="app_name">EduLife Planner</string>

    <!--    Home Page-->
    <string name="home_welcome_message">Welcome back,</string>
    <string name="glance_panel_label">At a Glance</string>
    <string name="glance_panel_subtitle">Today\'s Breakdown</string>
    <string name="glance_panel_text_1">
        • Classes Attended: 2\n• Study Sessions: 0\n• Assignments Due: 2\n• Next Class: HCDD 340 @ 4:35pm
    </string>
    <string name="glance_panel_text_2">
        • You\'ve hit 8/10 goals for the week.\n• You\'ve missed 2 classes in the past week.\n• You\'ve been studying 50% more compared to this time last week.\n• You\'ve reported feeling happy a record 26 times this month!
    </string>
    <string name="glance_panel_text_3">
        \"The only thing we have to fear is fear itself.\" - Franklin D. Roosevelt
    </string>
    <string name="glance_panel_num">1/3</string>
    <string name="week_panel_label">This Week</string>
    <string name="week_panel_mon_label">Mon</string>
    <string name="week_panel_tue_label">Tue</string>
    <string name="week_panel_wed_label">Wed</string>
    <string name="week_panel_thur_label">Thur</string>
    <string name="week_panel_fri_label">Fri</string>
    <string name="week_panel_sat_label">Sat</string>
    <string name="week_panel_sun_label">Sun</string>
    <string name="week_panel_text">2 Assignments\n3 Classes\n1 Event</string>
    <string name="beyond_panel_label">Beyond</string>
    <string name="beyond_panel_current_month"><u>Rest of December</u></string>
    <string name="beyond_panel_list">
        <ul><li>Soccer Game Trip (12/12 @ 12:10pm) at Subaru Park Stadium</li></ul>
        \n<ul><li>Custom Study Day (12/15 @ All Day) at Home &amp; Library</li></ul>
        \n<ul><li>Finals Week (12/16 - 12/20) at PSU</li></ul>
        \n<ul><li>Grad Party (12/31 @ 7:00pm) at Santander Arena</li></ul>
    </string>

    <!--    Main Menu-->
    <string name="profile_label">Profile</string>
    <string name="login_label">Login</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="view_profile_label">View Profile</string>
    <string name="sign_out_label">Sign Out</string>

    <!--    Bottom Navigation Bar-->
    <string name="home_label">Home</string>
    <string name="schedule_label">Schedule</string>
    <string name="goals_label">Goals</string>
    <string name="study_label">Study</string>

    <!-- Sign Up-->
    <string name="signup_title">Sign Up</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="major_label">Major:</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="signup_button">Sign Up</string>
    <string name="major_prompt">Select your major</string>
    <string name="major_engineering">Engineering</string>
    <string name="major_business">Business</string>
    <string name="major_arts">Arts</string>
    <string name="major_science">Science</string>
    <string name="major_education">Education</string>
    <string name="major_other">Other</string>

    <!-- Login-->
    <string name="login_button">Login</string>
    <string name="login_error_title">Login Error</string>
    <string name="login_error_message">Incorrect username and/or password was entered. Please try again.</string>

    <!-- Event Menu -->
    <string name="add_to_calendar_label">Add to Schedule</string>

    <!-- Events -->
    <string name="event_header">Today\'s Events</string>
    <string name="event_summary">You have no events scheduled. Add some to get started!</string>
    <string name="event_hub">Event Hub</string>
    <string name="select_today">Today</string>
    <string name="todays_events">Today\'s Events</string>
    <string name="no_events">You have no events today.</string>

    <!-- Add Events -->
    <string name="add_event_title">Add Event</string>
    <string name="task_name_hint">Task Name</string>
    <string name="select_date">Due Date</string>
    <string name="select_time">Time Due</string>
    <string name="task_description_hint">Task Description</string>
    <string name="save_event">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Profile -->
    <string name="profile_id_title">EduLife ID</string>
    <string name="profile_extra_info">Extra Information</string>
    <string name="profile_id_name">Name:</string>
    <string name="profile_id_email">Email:</string>
    <string name="profile_id_major">Major:</string>
    <string name="profile_id_institution_place">Institution:</string>
    <string name="profile_id_institution_type">Currently In:</string>
    <string name="profile_id_expected_grad_date">Expected Grad:</string>
    <string name="profile_id_account_creation_date">Account Made: </string>
    <string name="profile_id_account_update_date">Last Updated:</string>
    <string name="profile_institution_place_label">What institution are you studying at?</string>
    <string name="profile_institution_type_label">What level of education are you currently pursuing?</string>
    <string name="profile_expected_grad_date_label">What year are you anticipating to complete this level of education?</string>
    <string name="profile_institution_place_hint">Enter institution name (i.e. Penn State) </string>
    <string name="profile_institution_type_hint">Enter education level (i.e. College)</string>
    <string name="profile_expected_grad_date_hint">Enter anticipated completion date (i.e. 2025)</string>
    <string name="profile_update_button">Update Info</string>
    <string name="profile_clear_button">Clear Info</string>

    <!--    Study Page-->
    <string name="study_title_message">Study and Resources</string>
    <string name="mood_panel_label">Mood Check-In</string>
    <string name="mood_panel_subtitle">How are you feeling today?</string>
    <string name="mood_panel_amazing_label">Amazing!</string>
    <string name="mood_panel_good_label">Good</string>
    <string name="mood_panel_alright_label">Alright</string>
    <string name="mood_panel_not_good_label">Not too good</string>
    <string name="mood_panel_awful_label">Awful!</string>
    <string name="study_session_label">Study Sessions</string>
    <string name="study_session_info_1">Study Sessions Today: N/A</string>
    <string name="study_session_info_2">Study Notes Today: N/A</string>
    <string name="study_session_info_3">Current Day-Streak: N/A</string>
    <string name="study_session_view_notes_label">Review Study Session Notes</string>
    <string name="study_session_start_session_label">Start a Study Session</string>
    <string name="resource_panel_label">Helpful Resources</string>
    <string name="resource_panel_study_plans_label">Study Plans</string>
    <string name="resource_panel_helpful_sites_label">Helpful Sites</string>
    <string name="resource_panel_wellness_guides_label">Wellness Guides</string>

</resources>