<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/baseline_account_circle_128"
        android:title="@string/profile_label"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/login_item"
                android:title="@string/login_label" />
            <item
                android:id="@+id/sign_up_item"
                android:title="@string/sign_up_label" />
            <item
                android:id="@+id/view_profile_item"
                android:title="@string/view_profile_label" />
            <item
                android:id="@+id/sign_out_item"
                android:title="@string/sign_out_label" />
        </menu>
    </item>
</menu>