<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:minHeight="200dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".4" />

                    <TextView
                        android:id="@+id/profile_id_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/profile_id_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/profile_id_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/glance_day_border"
                        android:contentDescription="@string/profile_label"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_id_title"
                        app:srcCompat="@drawable/baseline_account_circle_128" />

                    <TextView
                        android:id="@+id/profile_id_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/profile_id_name"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.08"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_id_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/profile_id_email"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/profile_id_name"
                        app:layout_constraintTop_toBottomOf="@+id/profile_id_name" />

                    <TextView
                        android:id="@+id/profile_id_major"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/profile_id_major"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/profile_id_email"
                        app:layout_constraintTop_toBottomOf="@+id/profile_id_email" />

                    <TextView
                        android:id="@+id/profile_id_institution_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/profile_id_institution_place"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/profile_id_major"
                        app:layout_constraintTop_toBottomOf="@+id/profile_id_major" />

                    <TextView
                        android:id="@+id/profile_id_institution_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/profile_id_institution_type"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/profile_id_institution_place"
                        app:layout_constraintTop_toBottomOf="@+id/profile_id_institution_place" />

                    <TextView
                        android:id="@+id/profile_id_expected_grad_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/profile_id_expected_grad_date"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/profile_id_institution_type"
                        app:layout_constraintTop_toBottomOf="@+id/profile_id_institution_type" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/profile_extra_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:text="@string/profile_extra_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profile_institution_place_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile_institution_place_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/et_profile_institution_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_institution_place_hint"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/profile_institution_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_institution_type_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/et_profile_institution_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_institution_type_hint"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/profile_expected_grad_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_expected_grad_date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/et_profile_expected_grad_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/profile_expected_grad_date_hint"
                android:inputType="text"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btn_profile_clear_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/profile_clear_button" />

            <Button
                android:id="@+id/btn_profile_update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/profile_update_button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>