<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/glance_panel_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/glance_panel_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/glance_panel_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glance_panel_text_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/glance_panel_num_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom|end"
            android:text="@string/glance_panel_num"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>